new interaction model

--- a/starlanes.html
+++ b/starlanes.html
@@ -18,5 +18,6 @@
 
         
         <script src="starlanes.js" async defer></script>
+        <script src="planetary-interactions.js" async defer></script>
     </body>
 </html>
