split out helper functions

--- a/starlanes.html
+++ b/starlanes.html
@@ -16,8 +16,9 @@
     </head>
     <body>
 
-        
-        <script src="starlanes.js" async defer></script>
+        <script src="helperfunctions.js" async defer></script> 
+        <script src="starlanes.js" async defer></script>        
+        <!-- <script  type="module" src="starlanes.js" async defer></script> -->
         <script src="planetary-interactions.js" async defer></script>
     </body>
 </html>
